first stap finished
