# app/Http/Controllers/ApplicationTypeController.php
@@ -3,6 +3,7 @@
 namespace App\Http\Controllers;
 
 use App\Http\Requests\type\CreateTypeRequest;
+use App\Http\Resources\UniversalResource;
 use App\Models\ApplicationType;
 use App\Models\RequiredDocument;
 use Illuminate\Http\Request;
@@ -16,7 +17,11 @@ class ApplicationTypeController extends Controller
     ){}
     public function index()
     {
-        return $this->applicationType->get();
+        $search = request('search');
+        $data = $this->applicationType
+        ->where('title', 'LIKE', "%$search%")
+        ->with(['category'])->paginate(env('PG', 10));
+        return UniversalResource::collection($data);
     }
 
     public function store(CreateTypeRequest $request)
@@ -27,6 +32,7 @@ class ApplicationTypeController extends Controller
             $type = $this->applicationType->create([
                 'title' => $request['title'],
                 'description' => $request['description'],
+                'category_id' => $request['category_id']
             ]);
             $reqDoc = $this->separateDocuments($type->id, $request['description']);
             $this->requiredDocument->insert($reqDoc);
@@ -50,13 +56,36 @@ class ApplicationTypeController extends Controller
 
     public function update(CreateTypeRequest $request, $id)
     {
-        $request = $request->validated();
-        $type = $this->applicationType->where('id', $id)->first();
-        $type->update([
-            'title' => $request['title'],
-            'description' => $request['description']
-        ]);
-        return response()->json(['message' => env('MESSAGE_SUCCESS'), 'data' => $type], 201);
+        DB::beginTransaction();
+        try {
+            $request = $request->validated();
+            $description = $request['description'];
+            $type = $this->applicationType->where('id', $id)->first();
+            $reqDoc = $this->separateDocuments($id, $description);
+            $docs = [];
+            foreach ($reqDoc as $key => $value) {
+                $docs[] = $value['type'];
+            }
+            $this->requiredDocument->where('application_type_id', $id)->whereNotIN('type', $docs)->delete();
+            $alreadyHave = $this->requiredDocument->where('application_type_id', $id)->pluck('type')->toArray();
+            $docs = array_merge(array_diff($docs, $alreadyHave));
+            $mustAdd = collect($reqDoc)->whereIn('type', $docs)->toArray();
+            $this->requiredDocument->insert($mustAdd);
+            $type->update([
+                'title' => $request['title'],
+                'description' => $request['description']
+            ]);
+            DB::commit();
+            return response()->json(['message' => env('MESSAGE_SUCCESS'), 'data' => $type], 201);
+
+        } catch (\Exception $error) {
+            return response()->json([
+                'message' => env('MESSAGE_ERROR'),
+                'error' => $error->getMessage(),
+                'line' => $error->getLine(),
+                'file' => $error->getFile(),
+            ], 400);
+        }
     }
 
     public function destroy($id)
@@ -67,18 +96,18 @@ class ApplicationTypeController extends Controller
 
     private function separateDocuments($id, $text){
         /*
-        {} => required
-        && => not required
-        [] => multiple
+        {! something !} => required
+        (! something !) => not required
+        [! something !] => multiple
         */
-
         $arrayText = preg_split('//u', $text, -1, PREG_SPLIT_NO_EMPTY);
         $data = [];
         for ($i=0; $i < count($arrayText) ; $i++) {
-            if ($arrayText[$i] === '{') {
+
+            if ($arrayText[$i] === '{' && (isset($arrayText[$i+1]) && $arrayText[$i+1] === '!')) {
                 for ($n=$i; $n <  count($arrayText) ; $n++) {
-                    if ($arrayText[$n] === '}') {
-                        $innerElements = array_slice($arrayText, $i+1, $n-$i-1);
+                    if ($arrayText[$n] === '!' && (isset($arrayText[$n+1]) && $arrayText[$n+1] ==='}')) {
+                        $innerElements = array_slice($arrayText, $i+2, $n-$i-2);
                         $key = implode($innerElements);
                         $innerElement = [
                             'type' => $key,
@@ -92,10 +121,10 @@ class ApplicationTypeController extends Controller
                     }
 
                 }
-            }elseif ($arrayText[$i] === '<') {
+            }elseif ($arrayText[$i] === '(' && (isset($arrayText[$i+1]) && $arrayText[$i+1] === '!')) {
                 for ($n=$i; $n <  count($arrayText) ; $n++) {
-                    if ($arrayText[$n] === '>') {
-                        $innerElements = array_slice($arrayText, $i+1, $n-$i-1);
+                    if ($arrayText[$n] === '!' && (isset($arrayText[$n+1]) && $arrayText[$n+1] === ')')) {
+                        $innerElements = array_slice($arrayText, $i+2, $n-$i-2);
                         $key = implode($innerElements);
                         $innerElement = [
                             'type' => $key,
@@ -109,11 +138,10 @@ class ApplicationTypeController extends Controller
                     }
 
                 }
-            }elseif($arrayText[$i] === '[') {
-
+            }elseif($arrayText[$i] === '[' && (isset($arrayText[$i+1]) && $arrayText[$i+1] === '!')) {
                 for ($n=$i; $n <  count($arrayText); $n++) {
-                    if ($arrayText[$n] === ']') {
-                        $innerElements = array_slice($arrayText, $i+1, $n-$i-1);
+                    if ($arrayText[$n] === '!' &&  (isset($arrayText[$n+1]) && $arrayText[$n+1] === ']')) {
+                        $innerElements = array_slice($arrayText, $i+2, $n-$i-2);
                         $key = implode($innerElements);
                         $innerElement = [
                             'type' => $key,
@@ -125,7 +153,6 @@ class ApplicationTypeController extends Controller
                         $data[] = $innerElement;
                         break;
                     }
-
                 }
             }
         }
