# app/Http/Requests/type/CreateTypeRequest.php
@@ -12,7 +12,8 @@ class CreateTypeRequest extends MainRequest
     {
         return [
             "title" => 'required|string',
-            'description' => 'required|string'
+            'description' => 'required|string',
+            'category_id' => 'integer|required'
         ];
     }
 
@@ -20,7 +21,8 @@ class CreateTypeRequest extends MainRequest
     {
         return [
             'title.required' => "Ariza turi uchun nom kiritilmadi",
-            'description.required' => 'Ariza mazmuni kiritilmadi'
+            'description.required' => 'Ariza mazmuni kiritilmadi',
+            'category_id' => 'Ariza kategoryasini kiriting'
         ];
     }
 }
