# public/docs/openapi.yaml
@@ -5,7 +5,7 @@ info:
   version: 1.0.0
 servers:
   -
-    url: 'http://localhost:8000'
+    url: 'http://192.168.13.160:8000'
 paths:
   /api/login:
     post:
@@ -33,11 +33,11 @@ paths:
                 username:
                   type: string
                   description: ''
-                  example: quasi
+                  example: voluptate
                 password:
                   type: string
                   description: ''
-                  example: eos
+                  example: velit
               required:
                 - username
                 - password
@@ -125,15 +125,15 @@ paths:
                 username:
                   type: string
                   description: ''
-                  example: explicabo
+                  example: corrupti
                 full_name:
                   type: string
                   description: ''
-                  example: sit
+                  example: ducimus
                 password:
                   type: string
                   description: 'Must be at least 4 characters.'
-                  example: ^Dwp3m9~|B
+                  example: '4T#jR_[('
               required:
                 - username
                 - full_name
@@ -165,15 +165,15 @@ paths:
                 username:
                   type: string
                   description: ''
-                  example: ut
+                  example: voluptatum
                 full_name:
                   type: string
                   description: ''
-                  example: earum
+                  example: autem
                 password:
                   type: string
                   description: 'Must be at least 4 characters.'
-                  example: '2:DJ3Z|dwMgZL`C4YB0'
+                  example: 'G9D5XH]('
               required:
                 - username
                 - full_name
@@ -242,7 +242,7 @@ paths:
                 title:
                   type: string
                   description: ''
-                  example: reprehenderit
+                  example: et
               required:
                 - title
       security: []
@@ -300,7 +300,7 @@ paths:
                 title:
                   type: string
                   description: ''
-                  example: similique
+                  example: eaque
               required:
                 - title
       security: []
@@ -325,7 +325,7 @@ paths:
         in: path
         name: id
         description: 'The ID of the application category.'
-        example: 1
+        example: 5
         required: true
         schema:
           type: integer
@@ -383,14 +383,19 @@ paths:
                 title:
                   type: string
                   description: ''
-                  example: beatae
+                  example: sint
                 description:
                   type: string
                   description: ''
-                  example: 'Provident qui ipsam eligendi ullam.'
+                  example: 'Tempore voluptatem in error in.'
+                category_id:
+                  type: integer
+                  description: ''
+                  example: 18
               required:
                 - title
                 - description
+                - category_id
       security: []
   '/api/application-types/{id}':
     get:
@@ -446,14 +451,19 @@ paths:
                 title:
                   type: string
                   description: ''
-                  example: quis
+                  example: consequatur
                 description:
                   type: string
                   description: ''
-                  example: 'Fugit repellat veniam eaque dolorem aut vel.'
+                  example: 'Eligendi rerum aperiam tenetur eveniet aspernatur adipisci omnis voluptatem.'
+                category_id:
+                  type: integer
+                  description: ''
+                  example: 12
               required:
                 - title
                 - description
+                - category_id
       security: []
     delete:
       summary: ''
@@ -476,7 +486,7 @@ paths:
         in: path
         name: id
         description: 'The ID of the application type.'
-        example: 3
+        example: 6
         required: true
         schema:
           type: integer
